part1/ex1.09/gohtml/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gohtml-ing
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gohtml-svc
                port:
                  number: 80
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: gopong-svc
                port:
                  number: 81
